[package]
name = "wp-mini-epub"
version = "0.8.3"
edition = "2024"
description = "Minimal async WP to EPUB downloader | Extremely minimal."
license = "AGPL-3.0-only"
documentation = "https://docs.rs/wp-mini-epub"
homepage = "https://wprs.dev/mini-epub"
repository = "https://github.com/WattDownload/crate-wp-mini-epub"
authors = ["ZhiFenBL"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
iepub = "1.2.4"
lol_html = "2.7.0"
quick-xml = { version = "0.38.4", features = ["serde"] }
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
sanitize-filename = "0.6.0"
thiserror = "2.0.17"
tracing = "0.1.41"
wp-mini = "0.1.4"
zip = "6.0.0"
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
