[package]
name = "wp-mini-epub"
version = "0.9.0-alpha.2"
edition = "2024"
description = "Minimal async WP to EPUB downloader | Extremely minimal."
license = "AGPL-3.0-only"
documentation = "https://docs.rs/wp-mini-epub"
homepage = "https://wprs.dev/mini-epub"
repository = "https://github.com/WattDownload/crate-wp-mini-epub"
authors = ["ZhiFenBL"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.102"
futures = "0.3.32"
iepub = "1.3.5"
lol_html = "2.7.2"
quick-xml = { version = "0.39.2", features = ["serde"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "http2"] }
sanitize-filename = "0.6.0"
thiserror = "2.0.18"
tracing = "0.1.44"
wp-mini = "0.2.0-alpha.3"
zip = "8.5.1"
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }
